v 2.1.5 - Not yet released
  * Fixed the update event being called too early
  * Fixed a bug in the "load" API call
  * Fixed a bug in the setColor method of the Color object

v 2.1.4 - 22 Feb 2014
  * Fixed rendering issue when page is scrolled in Safari

v 2.1.3 - 2 Feb 2014
  * Fixed multiple triggering of show and beforeShow events
  * Added jQuery mobile popup integration demo

v 2.1.2 - 30 Jan 2014
  * Fixed crash in Chrome 32+

v 2.1.1 - 28 Dec 2013
  * Fixed missing shadow around the color preview for WebKit
  * Fixed memory leak
  * Added RSS feed for new releases
  * Added event testing jsFiddle

v 2.1.0 - 12 Oct 2013
  * Improved picker positioning in small window (moved left or up, if necessary)
  * Added "eventPrefix" property
  * Added "toggle" method
  * Fixed incorrect panel value calculation
  * Fixed crash when using Prototype.js with jQuery.noConflict
  * Documentation fixes
  * Updated to jQuery 1.10.2

v 2.0.0 - 28 Aug 2013
  * New color management module
  * Alpha support
  * Built-in side panel
  * Improved shadow rendering
  * Fixed IE mouse position bug
  * Updated to jQuery 1.9.1

v 1.1.0 - 16 Mar 2013
  * Configurable shadow color

v 1.0.1 - 24 Jan 2013
  * Improved Color.getTextColor() implementation according to BT 709 spec
  * Fixed calculations of the width of the hue selector
  * Changed default value for "ringwidth" property
  * New documentation page explaining widget dimensions
  * Documentation fixes

v 1.0.0 - 17 Jan 2013
  * Initial release