@@ -11,6 +11,7 @@
 <script src="../qunit-1.14.0.js"></script>
 <script src="../../module-color/color.js"></script>
 <script src="instanciation-test.js"></script>
+<script src="leakage-tests.js"></script>
 <script src="basic-tests.js"></script>
 <script src="valid-input-tests.js"></script>
 <script src="invalid-input-tests.js"></script>
